--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <section id="proficiencies">
             <p class="section_text_p1">Here Are My</p>
             <h1 class="title_2">Proficiencies</h1>
-            <div class="text_container">
+<!--             <div class="text_container">
                 <p>I can optimize your data for better results, informed decisions and cost savings. My proficiency in technical tools like SQL, Python, HTML, CSS, Power BI and Tableau, combined with strong soft skills, enables me to deliver impactful data solutions.</p>
-            </div>
+            </div> -->
             <div class="article_container">
                 <article>
                     <img src="./assets/data-analysis.png" alt="Data Analysis Icon" class="icon"/>
